Fix overflow in aside layout content (#290)

--- a/scss/underdog/objects/_aside-layout.scss
+++ b/scss/underdog/objects/_aside-layout.scss
@@ -15,7 +15,7 @@
 
 .aside-layout__content {
   // Allow the content to the right of the sidebar to stretch to fill the remaining space.
-  flex: 1 1 auto;
+  flex: 1 1 100%;
   // Allow the content to be scrollable.
   overflow-y: auto;
 }
